test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing/bad-pod-ready.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod
