test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod
  labels:
    foo: bad
spec:
  containers:
  - name: container01
    image: busybox:1.35
    args:
    - sleep
    - 1d
