test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing/03-goodpod.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: goodpod
spec:
  timeouts: {}
  try:
  - apply:
      file: good-pod.yaml
  - assert:
      file: good-pod-ready.yaml
