test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing/04-bad-pod-update.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: badpod
spec:
  timeouts: {}
  try:
  - apply:
      file: bad-pod-update.yaml
  - assert:
      file: bad-pod-ready.yaml
