test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing/05-good-pod-update.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: pod
spec:
  timeouts: {}
  try:
  - apply:
      check:
        (error != null): true
      file: good-pod-update.yaml
