test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/enforce-validate-existing/06-bad-to-good.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: badtogoodpod
spec:
  timeouts: {}
  try:
  - script:
      content: ./update-bad-pod-to-comply.sh
    timeout: 30s
